--- a/templates/admin.mustache
+++ b/templates/admin.mustache
@@ -1,13 +1,8 @@
-<form class="admin">
+<form class="admin" method="post" action="/wp-admin/admin.php?page=git-update">
     <header>
         <h1>Git Update</h1>
-        <label for="update-interval">Update every: </label>
-        <select name="update-interval">
-            <option value="request">Request</option>
-            <option value="hour">Hour</option>
-            <option value="day">Day</option>
-            <option value="week">Week</option>
-        </select>
+        <label for="update-interval">Auto update: </label>
+        <input type="checkbox" name="settings[enable]" {{#settings.autoUpdate}}enabled{{/settings.autoUpdate}}>
         <button type="submit" class="btn btn-primary">Save</button>
     </header>
     <table class="plugins">
