--- a/templates/notice.mustache
+++ b/templates/notice.mustache
@@ -1,3 +1,4 @@
 <div class="notice notice-info is-dismissible">
-    <p>Plugin update available: {{plugin}}</p>
+    <h4 style="margin-bottom: 5px">GitUpdate</h4>
+    <p>Plugin update available: {{name}}</p>
 </div>
