--- a/templates/notice.mustache
+++ b/templates/notice.mustache
@@ -1,4 +1,23 @@
-<div class="notice notice-info is-dismissible">
-    <h4 style="margin-bottom: 5px">GitUpdate</h4>
-    <p>Plugin update available: {{name}}</p>
+<div class="notice notice-info is-dismissible git-update-notice">
+    <form action="{{postUrl}}" method="post">
+        <h4>GitUpdate</h4>
+        <main>
+            <p>Plugin update available: <strong>{{name}}</strong></p>
+            <button class="button button-primary" type="submit">Update</button>
+            <input type="hidden" name="action" value="git_update">
+            <input type="hidden" name="relativePath" value="{{relativePath}}">
+            <input type="hidden" name="repoUri" value="{{repoUri}}">
+        </main>
+    </form>
 </div>
+
+<style>
+    .git-update-notice h4, .git-update-notice form {
+        margin-bottom: 5px;
+    }
+
+    .git-update-notice main {
+        display: flex;
+        justify-content: space-between;
+    }
+</style>
